feat: Implement user setup and registration flow
- Add setup form for initial admin account creation
- Update registration form to include confirm password field
- Create utility functions to check user setup status
- Modify database initialization script and update .env example
- Adjust database URL in setup script for consistency

Signed-off-by: thsvkd <thsxogud1123@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Database
-# For SQLite (default): file:./prisma/dev.db
+# For SQLite (default): file:./dev.db (stored in prisma/ directory)
 # For PostgreSQL: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
-DATABASE_URL="file:./prisma/dev.db"
+DATABASE_URL="file:./dev.db"
 
 # NextAuth Configuration
 # URL of your application (use http://localhost:3000 for local development)
