--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:headed": "playwright test --headed",
+    "test:e2e": "playwright install && (playwright install-deps || true) && playwright test",
+    "test:e2e:ui": "playwright install && (playwright install-deps || true) && playwright test --ui",
+    "test:e2e:headed": "playwright install && (playwright install-deps || true) && playwright test --headed",
     "test:all": "npm run test && npm run test:e2e"
   },
   "dependencies": {
