fix: fix test & add debug configs
Signed-off-by: thsvkd <thsxogud1123@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node scripts/init-db.js && next dev",
+    "dev": "node scripts/start-dev.js",
     "build": "next build",
-    "start": "next start",
+    "start": "node scripts/start-dev.js --prod",
     "lint": "eslint",
     "db:init": "node scripts/init-db.js",
     "test": "vitest run",
