--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,14 +100,16 @@ jobs:
         env:
           NODE_ENV: test
           DATABASE_URL: file:./test.db
-          NEXTAUTH_URL: http://localhost:3000
+          E2E_PORT: 3001
+          NEXTAUTH_URL: http://localhost:3001
           NEXTAUTH_SECRET: test-secret-for-ci
       - name: Run E2E tests
         run: npx playwright test
         env:
           NODE_ENV: test
           DATABASE_URL: file:./test.db
-          NEXTAUTH_URL: http://localhost:3000
+          E2E_PORT: 3001
+          NEXTAUTH_URL: http://localhost:3001
           NEXTAUTH_SECRET: test-secret-for-ci
       - name: Upload Playwright report
         uses: actions/upload-artifact@v4
