--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "node scripts/start-dev.js --prod",
     "lint": "eslint",
     "db:init": "node scripts/init-db.js",
-    "test": "vitest run",
+    "test": "vitest run --bail 1",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
+    "test:coverage": "vitest run --coverage --bail 1",
     "test:e2e": "playwright install --with-deps && playwright test",
     "test:e2e:ui": "playwright install --with-deps && playwright test --ui",
     "test:e2e:headed": "playwright install --with-deps && playwright test --headed",
+    "test:e2e:stop-on-failure": "playwright install --with-deps && STOP_ON_FAILURE=true playwright test",
     "test:all": "npm run test && npm run test:e2e",
     "prepare": "husky"
   },
