--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node scripts/start-dev.js",
+    "dev": "node scripts/start-app.js",
     "build": "next build",
-    "start": "node scripts/start-dev.js --prod",
+    "start": "node scripts/start-app.js --prod",
     "lint": "eslint",
     "db:init": "node scripts/init-db.js",
     "test": "vitest run --bail 1",
