feat: Add company location configuration check to check-in card, apply internationalization, and integrate Kakao Maps SDK
Signed-off-by: thsvkd <thsxogud1123@gmail.com>

--- a/.env.local.example
+++ b/.env.local.example
@@ -18,3 +18,6 @@ NEXTAUTH_SECRET="your-secret-here"
 
 # Port for E2E tests
 E2E_PORT=3001
+
+# API key for address search
+NEXT_PUBLIC_KAKAO_API_KEY="your-secret-here"
