--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "next build",
     "start": "node scripts/start-app.js --prod",
     "lint": "eslint",
+    "lint:fix": "eslint --fix .",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "check:quality": "npm run format:check && npm run lint && npm run typecheck",
     "db:init": "node scripts/init-db.js",
     "db:update-annual-leave": "tsx scripts/update-annual-leave.ts",
     "test": "vitest run --bail 1",
