chore: enforce consistent npm version with corepack and engines
Add packageManager field to pin npm@11.3.0 via corepack, preventing
package-lock.json diffs caused by npm version differences. Add engines
field to require Node >= 22 and engine-strict in .npmrc to block
installs on incompatible environments.

Signed-off-by: thsvkd <thsxogud1123@gmail.com>

--- a/.npmrc
+++ b/.npmrc
@@ -12,3 +12,6 @@ audit=false
 
 # Use legacy peer deps resolution to avoid conflicts
 legacy-peer-deps=false
+
+# Block install if Node version doesn't match engines
+engine-strict=true
