--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/adapter-better-sqlite3": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -61,7 +62,7 @@
     "next-intl": "^4.8.2",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
-    "react": "19.2.3",
+    "react": "19.2.4",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.4",
     "react-hook-form": "^7.71.1",
@@ -81,9 +82,10 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/leaflet": "^1.9.21",
-    "@types/qrcode.react": "^3.0.0",
     "@types/node": "^25",
+    "@types/qrcode.react": "^3.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.3",
@@ -99,7 +101,7 @@
     "magicast": "^0.5.2",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
-    "prisma": "^6.19.2",
+    "prisma": "^7.3.0",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.21.0",
     "typescript": "^5",
