--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "open-attendance",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "packageManager": "npm@11.3.0",
   "engines": {
     "node": ">=22.0.0"
@@ -78,6 +79,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.58.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
@@ -100,8 +102,8 @@
     "magicast": "^0.5.2",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
-    "tailwindcss": "^4.1.18",
     "prisma": "^7.3.0",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "typescript": "^5",
     "vitest": "^4.0.18",
