fix: resolve Prisma v7 type mismatch and ESM compatibility issues
- Add type assertion for PrismaAdapter to fix Prisma v7 incompatibility
- Rename scripts to .cjs for CommonJS compatibility with "type": "module"
- Fix SQLite path resolution mismatch between Prisma CLI and runtime

Signed-off-by: thsvkd <thsxogud1123@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "dev": "node scripts/start-app.js",
+    "dev": "node scripts/start-app.cjs",
     "build": "next build",
-    "start": "node scripts/start-app.js --prod",
+    "start": "node scripts/start-app.cjs --prod",
     "lint": "eslint",
     "lint:fix": "eslint --fix .",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "check:quality": "npm run format:check && npm run lint && npm run typecheck",
-    "db:init": "node scripts/init-db.js",
+    "db:init": "node scripts/init-db.cjs",
     "db:update-annual-leave": "tsx scripts/update-annual-leave.ts",
     "test": "vitest run --bail 1",
     "test:watch": "vitest",
